# view-bot

./: .gitignore  README.md  bot.py  proxy_checker.py  pyproject.toml  requirements.txt  start_tor.sh  stop_tor.sh
.data/: proxy_available.json  proxy_candidate.json
.github/workflows/: build.yaml
view_bot/: enums.py  logging.py  model.py  models.py  utils.py
view_bot/bots/: __init__.py  browsing_viewbot.py  continuous_viewbot.py  custom_viewbot.py  single_visit_viewbot.py  viewbot.py  viewbot_factory.py
viewerbot/: model.py  utils.py  viewbot.py
viewerbot/bots/: __init__.py  custom_viewbot.py  viewbot.py
