[tool.poetry]
name = "viewer-bot"
version = "0.1.0"
description = ""
authors = ["Raynor <jonggu.woo@fitpet.co.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
black = "^25.11.0"
httpx = "^0.28.1"
colorful-print = "^1.0.0"
pydantic = "^2.12.4"
typer = "^0.20.0"
playwright = "^1.56.0"
playwright-stealth = "^2.0.0"
fake-useragent = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
